fixed non string letters on input checking

--- a/terminal/logging.conf
+++ b/terminal/logging.conf
@@ -1,38 +1,27 @@
 [loggers]
-keys=root,sLogger
+keys=root,sampleLogger
 
 [handlers]
-keys=consoleHandler,fileHandler
+keys=fileHandler
 
 [formatters]
-keys=fileFormatter,consoleFormatter
+keys=sampleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler
+handlers=fileHandler
 
-[logger_sLogger]
+[logger_sampleLogger]
 level=DEBUG
-handlers=consoleHandler,fileHandler
-qualname=sLogger
+handlers=fileHandler
+qualname=sampleLogger
 propagate=0
-
-[handler_consoleHandler]
-class=StreamHandler
-level=WARNING
-formatter=consoleFormatter
-args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
 level=DEBUG
-formatter=fileFormatter
-args=('logfile.log',)
+formatter=sampleFormatter
+args=('logging.log', 'a')
 
-[formatter_fileFormatter]
-format=%(asctime)s - %(name)s - %(module)s - %(levelname)s - %(message)s
-datefmt=%Y-%m-%d %H:%M:%S
-
-[formatter_consoleFormatter]
-format=%(levelname)s - %(message)s
-datefmt=%Y-%m-%d %H:%M:%S
+[formatter_sampleFormatter]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
