--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ textual = "==0.34.0"
 typing-extensions = "==4.7.1"
 uc-micro-py = "==1.0.2"
 zipp = "==3.16.2"
+maskpass = "*"
 
 [dev-packages]
 
