--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.9
+RUN mkdir /app
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY src/ .
-CMD python app.py
+CMD ["python", "app_db.py"]
