--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 -i https://pypi.org/simple
+evdev==1.6.1; 'linux' in sys_platform
 greenlet==2.0.2
 importlib-metadata==6.8.0
 linkify-it-py==2.0.2
 markdown-it-py[linkify,plugins]==3.0.0
+maskpass==0.3.7
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
 pygments==2.16.1
+pynput==1.7.6
+python-xlib==0.33; 'linux' in sys_platform
 rich==13.5.2
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==2.0.20
 termcolor==2.3.0
 textual==0.34.0
